# ai-radio-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-gemini.txt  requirements.txt
ai_radio_agent/: __init__.py  agents.py  asr_transcribe.py  audio_fidelity_check.py  json_utils.py  moment_profiles.py  providers.py  render_episode.py  render_video.py  run_pipeline.py  schemas.py  tts_elevenlabs.py
docs/: demo_iterations.md  github_release_notes.md
outputs/: 00_memory_state.json  00_pipeline_manifest.json  00_recommendation.json  00_user_episode_input.json  00_user_preference.json  01_topic_plan.json  02_broadcast_context.json  02_research_brief.json  03_fact_check.json  03_research_brief.json  04_fact_check.json  04_script_outline.json  05_dialogue_script.json  05_script_outline.json  06_dialogue_plan.json  06_persona_script.json  07_dialogue_script.json  07_quality_eval.json  08_persona_script.json  08_tts_export.json  08_tts_input.txt  09_quality_eval.json  10_tts_export.json  episode_brief.json  final_episode_manifest.json  production_script.md  segment_plan.json  tts_clean_single_voice.txt  tts_elevenlabs_ready.md  tts_segments.json
outputs/dinner/: production_script.md  tts_segments.json
tests/: test_asr_transcribe.py  test_audio_fidelity_check.py  test_smoke.py
